--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-This is a version of the HTML Compressor I found on Google code that skips JSP tags while compressing 
-(in addition to the script and style tags) and strips JSP comments from the file.
+This is a version of the HTML Compressor I found on Google code that has been modified to skip JSP code
+markers (<%, %>) while compressing and strips JSP comments from the file.
 
 This version also includes an ANT task that can be used during an automated build process to optimize
 JSP files to remove the incessant "blank lines" that you get from JSP tag processing.
