Variable renaming to make the code more readable

--- a/README
+++ b/README
@@ -10,3 +10,4 @@ downloaded to the client.
 TODO:
 * Document Ant task included in README
 * Document modifications made to original source specific to JSP files.
+* Comment new code 
