--- a/README
+++ b/README
@@ -70,9 +70,10 @@ YUI actually parses the javascript - so it has to be syntactically correct.
 
 If you have syntactically incorrect Javascript, the YUICompressor parser will fail and the failing code will be used uncompressed.
 
-If you are receving "string index out of bounds" errors while trying to compress javascript, ensure that you do not have a version
-of Rhino in your CLASSPATH.   While the YUI compressor docs say that it can run side by side with other versions of Rhino, in my
-experience this isn't the case.  YUI compressor includes its own version of Rhino within the jar file and these conflict.
+If you are receving "string index out of bounds" errors while trying to compress javascript, ensure that you do not 
+have a version of Rhino in your CLASSPATH.   While the YUI compressor docs say that it can run side by side with 
+other versions of Rhino, in my experience this isn't the case.  YUI compressor includes its own version of Rhino 
+within the jar file and these conflict.
 
 Once I removed Rhino from my CLASSPATH, my errors went away.
 
