--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-This is a version of an HTML Compressor I found on Google code that has been modified to skip JSP code
-markers (<%, %>) while compressing and also strips JSP comments from the file.
+This is a version of an HTML Compressor I found on Google code that has been modified to work with
+Java Server Pages. 
 
 This version also includes an ANT task that can be used during an automated build process to optimize
 JSP files to remove the incessant "blank lines" that you get from JSP tag processing.
@@ -18,12 +18,12 @@ A sample of using the Ant task can be found in the build.xml file:
     <target name="test" depends="build.jar">
        <path id="compressor-classpath">
             <pathelement location="${lib.dir}/yuicompressor-2.4.3.jar"/>
-            <pathelement location="${build.dir}/htmlcompressor-0.8.1.jar"/>
+            <pathelement location="${build.dir}/jspcompressor-0.1.jar"/>
         </path>    
-        <taskdef name="compresshtml" classname="com.googlecode.htmlcompressor.ant.task.CompressHtmlTask" classpathref="compressor-classpath"/>
-        <compresshtml destdir="./tmp" compressjs="true" removecomments="true" removejspcomments="true" debug="false" skipstrutsformcomments="true">
+        <taskdef name="jspcompressor" classname="com.googlecode.jspcompressor.ant.task.CompressJspTask" classpathref="compressor-classpath"/>
+        <jspcompressor destdir="./tmp" compressjs="true" removecomments="true" removejspcomments="true" debug="false" skipstrutsformcomments="true">
             <fileset dir="testsrc" includes="**/*.jsp"/>
-        </compresshtml>
+        </jspcompressor>
     </target> 
     
 The lib directory for this package actually includes all of the jar files necessary to build and run.  These should
@@ -33,8 +33,8 @@ the ant task and compressor and is added as well.
 The <taskdef> task is used to let Ant know that you have a new task to add, where it is (classpathref) and the class
 name that implements the task.
 
-The code for the task can be found in the src/com/googlecode/htmlcompressor/ant/task directory.  Its nothing fancy, and
-only exposes a few of the properties at this point for the htmlcompressor.  More will come over time - but at this point
+The code for the task can be found in the src/com/googlecode/jspcompressor/ant/task directory.  Its nothing fancy, and
+only exposes a few of the properties at this point for the jspcompressor.  More will come over time - but at this point
 the ant task chooses "intelligent" defaults for the unexposed ones.
 
 Currently the attributes exposed for the task are:
@@ -76,10 +76,19 @@ YUI actually parses the javascript - so it has to be syntactically correct.
 
 If you have syntactically incorrect Javascript, the YUICompressor parser will fail and the failing code will be used uncompressed.
 
-If you are receving "string index out of bounds" errors while trying to compress javascript, ensure that you do not 
+If you are receiving "string index out of bounds" errors while trying to compress javascript, ensure that you do not 
 have a version of Rhino in your CLASSPATH.   While the YUI compressor docs say that it can run side by side with 
 other versions of Rhino, in my experience this isn't the case.  YUI compressor includes its own version of Rhino 
 within the jar file and these conflict.
 
 Once I removed Rhino from my CLASSPATH, my errors went away.
+
+Final Note
+----------
+The code for this has dramatically changed from the original.   To minimize confusion, the project and its related classes
+will now be called jspcompressor rather than HTMLCompressor.   While the name has changed and the functionality has been
+enhanced, it should still work on plain ol' html files as well as ASP and JSP files.
+
+I have also not kept the velocity tags and custom tag up to date, as this didn't necessarily map to the problem space I
+am dealing with (yet).   I welcome contributions to bring these up to date.
 
