--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-This is a version of an HTML Compressor I found on Google code that has been modified to work with
-Java Server Pages. 
+This is a version of an HTML Compressor I found on Google code that has been modified to work with Java Server Pages. 
 
 For detailed information on usage, building, etc., see the project wiki at http://wiki.github.com/rbieber/jspcompressor
